fixed overflow when scrolling

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,6 +50,6 @@ p {
 
 .siteBody {
   display: block;
-  position: relative;
-  margin-top: 4em;
+  overflow: auto;
+  height: auto;
 }
